# GuderRay

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/guderray-cli/: Cargo.toml
crates/guderray-cli/src/: main.rs
crates/guderray-core/: Cargo.toml
crates/guderray-core/src/: classify.rs  config.rs  draft.rs  error.rs  lib.rs  link.rs  model.rs  routing.rs  store.rs  sub.rs
crates/guderray-engine/: Cargo.toml
crates/guderray-engine/src/: assets.rs  clash.rs  lib.rs  process.rs  sysproxy_mod.rs
crates/guderray-gui/: Cargo.toml
crates/guderray-gui/src/: connections.rs  icon.rs  main.rs  state.rs
crates/guderray-gui/ui/: components.slint  main.slint  nav.slint  palette.slint
scripts/: package.ps1
