[package]
name = "guderray-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
base64.workspace = true
url.workspace = true
percent-encoding.workspace = true
directories.workspace = true
